admin page history box resize

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -7,7 +7,7 @@
     <p id="connectionStatus">Connecting to server...</p>
     <input id="commandPrompt"/>
     <button id="sendCommand" onclick="sendCommand()">SEND</button>
-    <div style="width: 40%; margin-top: 10px;">
+    <div style="width: 40em; margin-top: 10px;">
         <div id="commands"></div>
         <div id="received"></div>
     </div>
