admin page simplification

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -6,8 +6,8 @@
     <h1>Blizzard Bash Control Panel</h1>
     <p id="connectionStatus">Connecting to server...</p>
     <input id="commandPrompt"/>
-    <button id="sendCommand" onclick="sendCommand()">SEND</button>
-    <div style="width: 40em; margin-top: 10px;">
+    <button id="sendCommand" onclick="sendCommand()">Send</button>
+    <div>
         <div id="commands"></div>
         <div id="received"></div>
     </div>
