admin stop game command

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -10,11 +10,12 @@
         <tr><td>start</td><td>Start the game</td></tr>
         <tr><td>elimination</td><td>Switch game mode to elimination</td></tr>
         <tr><td>infinite</td><td>Switch game mode to infinite</td></tr>
+        <tr><td>stop</td><td>Forcibly stop the game</td></tr>
     </table>
     <p id="connectionStatus">Connecting to server...</p>
     <input id="commandPrompt"/>
     <button id="sendCommand" onclick="sendCommand()">Send</button>
-    <div style="margin-top: 50px">
+    <div style="margin-top: 80px">
         <div id="commands"></div>
         <div id="received"></div>
     </div>
