server view of the game

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -17,7 +17,7 @@
     <button id="sendCommand" onclick="sendCommand()">Send</button>
     <div style="margin-top: 80px">
         <div id="commands"></div>
-        <div id="received"></div>
+        <pre id="received"></pre>
     </div>
     <script src="admin.js"></script>
 </body>
