admin kick command

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -11,11 +11,12 @@
         <tr><td>elimination</td><td>Switch game mode to elimination</td></tr>
         <tr><td>infinite</td><td>Switch game mode to infinite</td></tr>
         <tr><td>stop</td><td>Forcibly stop the game</td></tr>
+        <tr><td>kick &#60;id&#62;</td><td>Forcibly stop the game</td></tr>
     </table>
     <p id="connectionStatus">Connecting to server...</p>
     <input id="commandPrompt"/>
     <button id="sendCommand" onclick="sendCommand()">Send</button>
-    <div style="margin-top: 80px">
+    <div style="margin-top: 100px">
         <div id="commands"></div>
         <pre id="received"></pre>
     </div>
