--- a/admin/admin.html
+++ b/admin/admin.html
@@ -11,7 +11,7 @@
         <tr><td>elimination</td><td>Switch game mode to elimination</td></tr>
         <tr><td>infinite</td><td>Switch game mode to infinite</td></tr>
         <tr><td>stop</td><td>Forcibly stop the game</td></tr>
-        <tr><td>kick &#60;id&#62;</td><td>Forcibly stop the game</td></tr>
+        <tr><td>kick &#60;id&#62;</td><td>Kick player with a specific id</td></tr>
     </table>
     <p id="connectionStatus">Connecting to server...</p>
     <input id="commandPrompt"/>
