--- a/admin/admin.html
+++ b/admin/admin.html
@@ -7,16 +7,16 @@
     <table id="info">
         <caption></caption>
         <tr><th style="width: 25%">Command</th><th>Description</th></tr>
-        <tr><td>start</td><td>Start the game</td></tr>
+        <tr><td>start [time]</td><td>Start a game that lasts [time] minutes</td></tr>
         <tr><td>elimination</td><td>Switch game mode to elimination</td></tr>
         <tr><td>infinite</td><td>Switch game mode to infinite</td></tr>
         <tr><td>stop</td><td>Forcibly stop the game</td></tr>
-        <tr><td>kick &#60;id&#62;</td><td>Kick player with a specific id</td></tr>
+        <tr><td>kick [id]</td><td>Kick player with a specific id</td></tr>
     </table>
     <p id="connectionStatus">Connecting to server...</p>
     <input id="commandPrompt"/>
     <button id="sendCommand" onclick="sendCommand()">Send</button>
-    <div style="margin-top: 100px">
+    <div style="margin-top: 150px">
         <div id="commands"></div>
         <pre id="received"></pre>
     </div>
