WIP player rendering renders received players at given locations

--- a/spectator/index.html
+++ b/spectator/index.html
@@ -2,12 +2,13 @@
 
 <head>
     <title>Blizzard Bash Live</title>
-    <link rel="stylesheet" href="admin.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
     <h1>Blizzard Bash Live</h1>
     <div id="connectionStatus"></div>
+    <canvas id="game"></canvas>
     <pre id="received"></pre>
     <script src="index.js"></script>
 </body>
