i forgot what i did in this commit

--- a/spectator/index.html
+++ b/spectator/index.html
@@ -7,8 +7,5 @@
 
 <body>
     <h1>Blizzard Bash Live</h1>
-    <div id="connectionStatus"></div>
-    <canvas id="game"></canvas>
-    <pre id="received"></pre>
-    <script src="index.js"></script>
+    <a href="live-view.html">Watch live</a>
 </body>
