--- a/spectator/live/index.html
+++ b/spectator/live/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <head>
     <title>Blizzard Bash Live</title>
-    <link rel="stylesheet" href="live-view.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
     <canvas id="game"></canvas>
     <div id="connectionStatus"></div>
     <pre id="received"></pre>
-    <script src="live-view.js"></script>
+    <script src="index.js"></script>
 </body>
