--- a/leaderboard/index.html
+++ b/leaderboard/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
+<html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blizzard Bash Leaderboard</title>
     <link rel="stylesheet" href="index.css">
 </head>
@@ -12,17 +15,8 @@
             <th>Username</th>
             <th>Score</th>
         </tr>
-        <tr>
-            <td>player1</td>
-            <td>50</td>
-        </tr>
-        <tr>
-            <td>player2</td>
-            <td>100</td>
-        </tr>
-        <tr>
-            <td>player3</td>
-            <td>150</td>
-        </tr>
+        <!-- Player data will be dynamically inserted here -->
     </table>
 </body>
+
+</html>
