fix some leaderboard syntax issues

--- a/leaderboard/index.html
+++ b/leaderboard/index.html
@@ -17,6 +17,7 @@
         </tr>
         <!-- Player data will be dynamically inserted here -->
     </table>
+    <script src="index.js"></script>
 </body>
 
 </html>
