--- a/leaderboard/index.html
+++ b/leaderboard/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blizzard Bash Leaderboard</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
@@ -17,7 +17,6 @@
         <table>
             <thead>
                 <tr>
-                    <th>Rank</th>
                     <th>Username</th>
                     <th>Score</th>
                 </tr>
