--- a/admin/admin.html
+++ b/admin/admin.html
@@ -12,6 +12,7 @@
         <tr><td>infinite</td><td>Switch game mode to infinite</td></tr>
         <tr><td>stop</td><td>Forcibly stop the game</td></tr>
         <tr><td>kick [id]</td><td>Kick player with a specific id</td></tr>
+        <tr><td>powerup [name]</td><td>Add a specific powerup in a random location</td></tr>
     </table>
     <p id="connectionStatus">Connecting to server...</p>
     <input id="commandPrompt"/>
