add added new admin commands

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -12,6 +12,8 @@
         <tr><td>infinite</td><td>Switch game mode to infinite</td></tr>
         <tr><td>stop</td><td>Forcibly stop the game</td></tr>
         <tr><td>kick [id]</td><td>Kick player with a specific id</td></tr>
+        <tr><td>kick [name]</td><td>Kick player with a specific name</td></tr>
+        <tr><td>powerup [id]</td><td>spawns 40 powerup with the specific id</td></tr>
     </table>
     <p id="connectionStatus">Connecting to server...</p>
     <input id="commandPrompt"/>
