add admin data-view fine control

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -18,6 +18,7 @@
     <p id="connectionStatus">Connecting to server...</p>
     <input id="commandPrompt"/>
     <button id="sendCommand" onclick="sendCommand()">Send</button>
+    <div id="viewToggles"></div>
     <div style="margin-top: 150px">
         <div id="commands"></div>
         <pre id="received"></pre>
